# NeuralMagFork

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  update_license.sh
.gitlab/ci/: generate-notebook-pipeline.py  notebook-pipeline.yml.j2
binder/: requirements.txt
demos/: DMI-in-1D-stripe.py  LI.py  _static_method_compare.py  composite-chiral-magnet.py  domain-wall-depinning.py  skyrmion-disk.py  standard-problem-3.py  standard-problem-4.py  stoner-wohlfarth-hysteresis.py  synthetic-antiferromagnet.py  time-dependent-optimization_jax.py  time-dependent-optimization_torch.py  topology-optimization_jax.py
demos/cubic_ani/: run1d.py  run2d.py
demos/dmi_1d/: run.py
demos/inverse_cube/: run.py  run_jax.py  run_no_demag.py  run_optx.py  run_torch.py
demos/saf/: run.py
demos/skyrmion/: run2d.py
demos/sp4/: run.py  run2d.py
demos/sw/: run.py
dev/: cache-kernel.ipynb  dmi.ipynb  gauss-legendre-with-exact-roots.ipynb  global-memory-coalescing.ipynb  run2d_imex.py
docs/: conf.py  field_terms.rst  getting_started.ipynb  getting_started.rst  index.rst  introduction.rst  nodal_fd.rst
docs/_templates/: page-toc.html
docs/examples/: DMI-in-1D-stripe.ipynb  DMI_in_1D_stripe.ipynb  LI.ipynb  composite-chiral-magnet.ipynb  domain-wall-depinning.ipynb  index.rst  skyrmion-disk.ipynb  standard-problem-3.ipynb  standard-problem-4.ipynb  standard-problem-5.ipynb  stoner-wohlfarth-hysteresis.ipynb  synthetic-antiferromagnet.ipynb  time-dependent-optimization_jax.ipynb  time-dependent-optimization_torch.ipynb  topology-optimization_jax.ipynb  topology_optimization_jax.ipynb
docs/reference/: config.rst  field_terms.rst  generator.rst  index.rst  llg_solver.rst  loggers.rst  state.rst  state_and_mesh.rst
docs/user_guide/: discretization.rst  domains.rst  dynamic_attributes.rst  form_compiler.rst  getting_started.ipynb  index.rst  introduction.rst  pbc.rst
magnumnf/: __init__.py
magnumnf/common/: constants.py  state.py
magnumnf/field_terms/: __init__.py  exchange.py  field_term.py
magnumnf/solvers/: __init__.py
neuralmag/: __init__.py
neuralmag/backends/: pytorch_backend.py
nmagnum/: __init__.py
tests/: conftest.py
(+110 files in other folders)
