[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nmagnum"
version = "0.0.1"
description = "nmagnum is a micromagnetic GPU code implementing the nodal FD discretization"
requires-python = ">=3.8, <3.11"

authors = [{ name = "Claas Abert", email = "claas.abert@univie.ac.at" }]

dependencies = ["numpy", "sympy", "pyvista", "scipy", "torch", "torchdiffeq", "tqdm"]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.setuptools.packages.find]
include = ["nmagnum*"]

[tool.black]
experimental-string-processing = true
exclude = "/field_terms/cache"

[tool.isort]
profile = "black"
skip_gitignore = true  # ignores files listed in .gitignore
skip_glob = ["/nmagnum/field_terms/cache/*"]
